--- a/templates/index.html
+++ b/templates/index.html
@@ -2,22 +2,19 @@
 <html>
   <head>
     <title>Bootstrap 101 Template</title>
-    <!-- Bootstrap -->i
+    <!-- Bootstrap -->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet"></link>
-    <script type="text/javascript">
-      function showCategoryBox() {
-        var name=prompt("Please enter a new category name");
-
-        if (name != null) {
-          alert('Saved!');
-        }
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
       }
-    </script>
+    </style>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container-fluid">
+        <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -26,8 +23,8 @@
           <a class="brand" href="#">OST Project</a>
           <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
-              Logged in as ashish.walia@gmail.com | 
-              <a href="#" class="navbar-link">Logout</a>
+              Hello, {{ user }} | 
+              <a href="{{ logout_url }}" class="navbar-link">Logout</a>
             </p>
             
             <ul class="nav">
@@ -42,7 +39,7 @@
       <div class="hero-unit">
         <div class="row">
           <div class="span3">
-            <p><a class="btn btn-primary btn-large" href="#" onclick="showCategoryBox();">Create new Category</a></p><br><br>
+            <p><a class="btn btn-primary btn-large" href="/category/new">Create new Category</a></p><br><br>
             <p><a class="btn btn-primary btn-large">Edit existing Category</a></p>
           </div>
           <div class="span4">
