Misc. fixes/cleanup on results page

--- a/templates/user_category.html
+++ b/templates/user_category.html
@@ -59,6 +59,7 @@
               <td> {{ category['items'] }} </td>
               <td> {{ category['date'] }} </td>
               <td><a class="btn btn-small btn-info" href="/category/edit/{{ category['id'] }}">Edit</a></td>
+              <td><a class="btn btn-small btn-danger" href="/category/delete/{{ category['id'] }}">Delete</a></td>
             </tr>
            {% endfor %}
           </tbody>
