--- a/templates/import.html
+++ b/templates/import.html
@@ -9,12 +9,6 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
-      .icon-remove {
-        visibility: hidden;
-      }
-      .control-group:hover > .controls > .icon-remove {
-        visibility: visible;
-      }
     </style>
   </head>
   <body>
@@ -43,33 +37,11 @@
 
     <div class="container">
       <div class="hero-unit">
-        <table class="table table-striped table-bordered">
-          <thead>
-            <tr>
-              <th>Category</th>
-              <th>Owner</th>
-              <th>Number of items</th>
-              <th>Time created</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for category in categories %}
-            <tr>
-              <td> {{ category['name'] }} </td>
-              <td> {{ category['owner'] }} </td>
-              <td> {{ category['items'] }} </td>
-              <td> {{ category['date'] }} </td>
-              {% if page == 'export' %}
-                <td><a class="btn btn-small btn-info" href="/category/export/{{ category['id'] }}">Export</a></td>
-              {% else %}
-                <td><a class="btn btn-small btn-info" href="/category/vote/{{ category['id'] }}">Select</a></td>
-              {% endif %}
-            </tr>
-           {% endfor %}
-          </tbody>
-        </table>
-      </div>
+        <form action="/category/import_xml" method="post" enctype="multipart/form-data">
+          <input type="file" name="file" id="file">
+          <button type="submit" class="btn btn-warning">Import XML</button>
+        </form>
+    </div>
     </div>
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
