--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,14 @@
 
     <div class="container">
       <div class="hero-unit">
+        <form class="form-search" method="post" action="/search">
+          <div class="input-append">
+            <input type="text" class="input-large search-query" style="margin-left:360px;" name="searchTerm">
+            <button type="submit" class="btn btn-inverse">Search Item/Category</button>
+          </div>
+        </form>
+        <hr>            
+        
         <div class="row">
           <div class="span6" style="margin-left:60px;">
             <p><a class="btn btn-primary btn-large" href="/category/new">Create new Category</a></p><br><br>
@@ -48,8 +56,8 @@
           </div>
           <div class="span4">
             <p><a class="btn btn-primary btn-large" href="/category/results">View results of existing Category</a></p><br><br>
-            <p><a href="#searchModal" role="button" class="btn btn-primary btn-large" data-toggle="modal">Search Item/Category</a></p><br><br>
-            <p><a class="btn btn-primary btn-large">Export existing Category</a></p><br><br>
+            <p><a class="btn btn-primary btn-large" href="/category/import_page">Import Category</a></p><br><br>
+            <p><a class="btn btn-primary btn-large" href="/category/export">Export existing Category</a></p><br><br>
           </div>
         </div>
         <div id="searchModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -58,10 +66,6 @@
             <h3 id="myModalLabel">Enter search term</h3>
           </div>
           <div class="modal-body">
-            <form class="form-search" method="post" action="/search">
-              <input type="text" class="input-xlarge search-query" style="margin-left:50px;" name="searchTerm">
-              <button type="submit" class="btn btn-primary">Search</button>
-            </form>
           </div>
         </div>
       </div>
